# WikiaRelationshipAnalysis

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  CODE_REVIEW_VECTOR_STORE.md  IMPLEMENTATION_PLAN.md  NORMALIZATION_PLAN.md  OPTIMIZATION_PLAN.md  README.md  SESSION_CLEANUP_PLAN.md  SUCCESS_SUMMARY.md  TEST_RESULTS.md  TIER_CLASSIFICATION_INVESTIGATION.md  TMP_PATH_REFACTOR_PLAN.md  main.py  pyproject.toml  test_crawl.py  test_crawler.py  test_resume.py
.claude/: settings.local.json
config/: crawler_config.yaml  processor_config.yaml  rate_limits.yaml
docs/: README.md  embedding_provider_interface.md  phase2_rag_implementation.md
scripts/: crawl_wikia.py  debug_real_llm_discovery.py  debug_validation.py  debug_validation_detailed.py  demo_duplicate_names.py  full_e2e_demo.py  poc_build_relationships.py  poc_crawl_avatar.py  poc_discover_characters.py  poc_index_avatar.py  poc_validate_results.py  refactor_tests_tmp_path.py  resume_crawl.py  run_full_pipeline.py  test_real_llm_discovery.py  test_save_real_data.py  validate_phase2_with_real_data.py
src/cli/: __init__.py  crawl_commands.py  pipeline.py  processor_commands.py  utils.py
src/crawler/: __init__.py
src/crawler/core/: __init__.py  crawler.py  session_manager.py  url_manager.py
src/crawler/extraction/: __init__.py  link_discoverer.py  page_extractor.py  wikia_parser.py
src/crawler/persistence/: __init__.py  content_saver.py  crawl_state.py
src/crawler/rate_limiting/: __init__.py  backoff_handler.py  rate_limiter.py  robots_parser.py
src/crawler/utils/: __init__.py  content_filters.py  url_utils.py
src/processor/: __init__.py  config.py
src/processor/analysis/: __init__.py  character_extractor.py  profile_builder.py
src/processor/core/: __init__.py  content_chunker.py
src/processor/llm/: __init__.py  llm_client.py
src/processor/rag/: __init__.py  embeddings.py  query_engine.py  retriever.py  vector_store.py
src/utils/: logging_config.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/fixtures/llm_responses/character_discovery/: comprehensive_query.json  query_1_major_characters.json  query_2_storyline_characters.json  query_3_protagonists_antagonists.json  query_4_affiliations.json  query_5_relationships.json
tests/fixtures/sample_pages/: aang.json  bumi_king.json  bumi_son.json  korra.json  mako.json  republic_city.json  team_avatar.json
tests/mocks/: __init__.py  mock_llm_client.py
tests/test_crawler/: __init__.py
tests/test_crawler/core/: __init__.py  test_crawl_wikia.py  test_crawler_init.py  test_session_manager.py  test_url_manager.py
tests/test_crawler/extraction/: __init__.py  test_link_discoverer.py  test_page_extractor.py  test_wikia_parser.py
tests/test_crawler/fixtures/: sample_robots.txt  sample_wikia_page.html
tests/test_crawler/persistence/: __init__.py  test_content_saver.py  test_crawl_state.py
tests/test_crawler/rate_limiting/: __init__.py  test_backoff_handler.py  test_backoff_handler_integration.py  test_rate_limiter.py  test_rate_limiter_integration.py  test_robots_parser.py
tests/test_crawler/utils/: __init__.py  test_content_filters.py  test_url_utils.py
tests/test_processor/analysis/: __init__.py  test_character_extractor.py  test_character_extractor_integration.py  test_profile_builder.py
tests/test_processor/core/: __init__.py  test_content_chunker.py
tests/test_processor/llm/: __init__.py  test_llm_client.py
tests/test_processor/rag/: test_embeddings.py  test_query_engine.py  test_rag_integration.py  test_retriever.py  test_vector_store.py  test_vector_store_integration.py
